--- a/src/components/styles/Skills.scss
+++ b/src/components/styles/Skills.scss
@@ -7,43 +7,41 @@
         height: 100vh;
         min-height: unset; // Override the min-height
         transition: height 0.3s ease; // Add a transition for smooth collapsing
+    
+        &.collapsed {
+            height: 15vh;
+            overflow: hidden;
+            display: flex;              // Turn the .skills into a flex container
+            align-items: center;        // Vertically center the content
+            justify-content: center;    // Horizontally center the content
+    
+            .skill__content {
+                p {
+                    display: none;
+                }
+            }
+        }
     }
-
-    .skills.collapsed {
-        height: 15vh;
-        overflow: hidden; 
-        display: flex;              // Turn the .skills into a flex container
-        align-items: center;       // Vertically center the content
-        justify-content: center;   // Horizontally center the content
-
-    }
-
-    .skills.collapsed .skill__content p {
-        display: none;
-    }
-
+    
     .skill__container {
         flex-direction: column;
         margin: 1.5rem;
         display: flex;
         justify-content: space-between;
         align-items: center;
-
+    
         h1 {
             color: rgb(0, 129, 167);
             text-transform: uppercase;
             font-size: 3em;
-
         }
     }
-
-
+    
     .skill__content {
         margin: 0 auto;
         line-height: 2em;
         text-align: center;
         margin-top: 1em;
-    
     
         p {
             font-weight: bolder;
@@ -57,6 +55,7 @@
             font-size: 0.9em;
         }
     }
+    
 
 
 
@@ -135,13 +134,45 @@
 
     }
 
-    //Smaller desktop
-    @media (min-width: 1024px) and (max-width: 1280px) {
-
-        .skills.collapsed {     
-            height: 100vh; 
-        }
+//Smaller desktop
+@media (min-width: 1024px) and (max-width: 1280px) {
+    .skills {
     
+
+            .skill__content {
+                p {
+                    display: block; 
+                }
+            }
+        
+    }
+
+    .skill__container {
+        margin: 1.5rem;
+
+
+        h1 {
+            font-size: 3em;
+        }
+    }
+
+    .skill__content {
+        line-height: 0.8em;
+
+        p {
+            padding: 1.7em;
+            margin-block: 0.5em;
+            font-size: 1.1em;
+        }
+    }
+}
+
+    
+
+    //Normal Desktop
+    @media (min-width: 1281px) {
+
+   
         .skills.collapsed .skill__content p {
             display: block; 
         }
@@ -150,42 +181,6 @@
 
             .skill__container {
                 margin: 1.5rem;
-                h1 {
-                    font-size: 3em;
-                }
-            }
-        
-        
-            .skill__content {
-                line-height: 0.8em;
-              
-                p {
-    
-                    padding: 1.7em;
-                    margin-block: 0.5em;
-                    font-size: 1.1em;
-                }
-    
-            }
-
-    }
-    
-
-    //Normal Desktop
-    @media (min-width: 1281px) {
-
-        .skills.collapsed {     
-            height: 100vh; 
-        }
-    
-        .skills.collapsed .skill__content p {
-            display: block; 
-        }
-
-
-
-            .skill__container {
-                // margin: 1.5rem;
                 h1 {
                     font-size: 4em;
                     margin-bottom: 2.25rem;
